--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "homepage": "https://github.com/steakxiaoxin/react-lifecycle",
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "axios": "^0.21.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
